# pwr-chk

./: Cargo.toml  LICENSE  README.md
src/: main.rs
systemd/: pwrchk.service
